<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_social"
        android:icon="@drawable/ic_share_black_24dp"
        android:title="@string/nav_social" />
    <item
        android:id="@+id/nav_secondhand"
        android:icon="@drawable/ic_second_hand"
        android:title="@string/secondhand" />
    <item
        android:id="@+id/nav_notif"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/nav_notification" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile_black_24dp"
        android:title="@string/nav_profile" />
</menu>